--- a/style.css
+++ b/style.css
@@ -1,29 +1,107 @@
-selecton {
-	pr: value;
+
+* {
+	margin: 0%;
+	padding: 0;
+	box-sizing: border-box;
 }
-.top {
-	height: 160px;
-	width: auto;
-	background-color: red;
-	text-align: center;
+body {
+	font-family: 'Poppins', sans-serif;
+/*	font-family: 'Roboto', sans-serif;*/
 }
-.mid {
-	height: 300px;
-	width: auto;
-	background-color: green;
+* {
+	margin: 0;
+	padding: 0;
+	box-sizing: border-box;
 }
-.left,.middle,.right {
-	text-align: center;
-	height: 75.00%;
-	width: 30%;
-	margin: 3% 1% 0% 2%;
+.half_width {
+	width: 40%;
 	float: left;
-	background-color: red;
+	margin-left: 5%;
+/*	margin-bottom: 5%;*/
+	padding-left: 2%;
 }
-.bottom {
-	height: 160px;
-	width: auto;
-	background-color: red;
-	text-align: center;
-	text-shadow: yellowgreen;
+.topbaner {
+	display: flex;	
+	background-image: url("image/top-banner.png");
+	background-repeat: no-repeat;
+}
+.imgsize {
+	width: 100%;
+}
+
+h1 {
+	margin: 15px;
+	font-size: 200%;
+}
+h3 {
+	margin: 15px;
+	font-size: 150%;
+}
+.orgclr {
+	color: orange;
+}
+.name {
+	font-size: 40px;
+}
+p {
+	margin: 15px;
+	text-align: left;
+}
+.buttons {
+	background-color: orange;
+	border: 2px solid transparent;
+	border-color: none;
+	border-radius: 10px;
+	padding: 10px 30px;
+
+
+}
+.buttons:hover {
+	background-color: #C98A0f;
+}
+.hire_me {
+	color: white;
+	font-size: 15px;
+}
+.btn {
+	margin: 10px;
+}
+
+/*box 2 =============================*/
+.section_one {
+	display: flex;
+
+}
+.section-image {
+	margin: 20px;
+	height: 340px;
+	width: 320px;
+
+}
+.dream_big {
+	margin-top: 30px;
+	margin-left: 15%;
+}
+
+.one,.two {
+	float: left;
+}
+/*================================*/
+.st2 {
+	height: 300px;
+/*	background-image: url("image/my-bg.png");*/
+/*	background-image: linear-gradient(red ,burlywood, orange);*/
+}
+.fstack {
+	box-shadow: 1px 1px 20px 3px rgba(20, 20, 20, 0.4);
+	border-left: 5px solid black;
+}
+.bstack {
+	box-shadow: 1px 1px 20px 3px rgba(20, 20, 20, 0.4);
+	border-left: 5px solid  red;
+	height: 290px;
+}
+.exp {
+/*	left: 30px;*/
+	padding-left: 50px;
 }
